Force scrolling on all pages with overflow and min-height fixes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="overflow-y: auto;">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -9,7 +9,7 @@
      crossorigin=""/>
     <title>Kodekalesh25</title>
   </head>
-  <body>
+  <body style="overflow-y: auto; height: auto; min-height: 100vh;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
